<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".detail.UserDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail_photo"
            android:layout_width="85dp"
            android:layout_height="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19"
            android:contentDescription="@string/ct_avatar"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_detail_fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/img_detail_photo"
            tools:text="@string/icha_fullName" />

        <TextView
            android:id="@+id/tv_detail_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/grey_username"
            android:textSize="16sp"
            android:layout_below="@id/tv_detail_fullName"
            android:layout_toEndOf="@id/img_detail_photo"
            tools:text="@string/icha_userName" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/tv_detail_fullName"
            android:contentDescription="@string/like_button"
            android:backgroundTint="@color/secondary_purple"
            app:srcCompat="@drawable/ic_baseline_favorite_24"
            app:tint="@color/yellow_detail"/>

        <RelativeLayout
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_detail_photo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_outline_location_on_24"
                android:contentDescription="@string/ct_location" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_toEndOf="@id/iv_location"
                tools:text="Jakarta" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/location" >

            <ImageView
                android:id="@+id/iv_office"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/ct_office"
                android:src="@drawable/icon_office" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_toEndOf="@id/iv_office"
                tools:text="Gojek" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="350dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/company"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/bg_darkNavy"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/purple_detail"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:text="@string/repositories" />

                    <TextView
                        android:id="@+id/tv_detail_repo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        tools:text="40" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/purple_detail"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:text="@string/followers" />

                    <TextView
                        android:id="@+id/tv_detail_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        tools:text="40" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/purple_detail"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:text="@string/following" />

                    <TextView
                        android:id="@+id/tv_detail_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        tools:text="40" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_below="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/grey_item"
            app:tabTextColor="@color/white"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_below="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>
</ScrollView>