<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_darkNavy"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relSearch"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            app:boxStrokeColor="@color/teal_700"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/search_user"
            android:textColorHint="@color/teal_700"
            app:startIconDrawable="@drawable/ic_baseline_search_24"
            app:startIconTint="@color/white" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/search"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_detail"/>
        </LinearLayout>

    <ImageView
        android:id="@+id/hello"
        android:contentDescription="@string/hello"
        android:layout_below="@id/relSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hello"
        android:visibility="visible" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_user"
        android:layout_below="@id/relSearch" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>